Implement SQLite database and registration system
- Add DatabaseHelper with SQLiteOpenHelper
- Implement Users table with secure SHA-256 password hashing
- Create RegisterActivity with input validation
- Add registration UI layout with Material Design
- Update AndroidManifest with RegisterActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CineStack">
+        
+        <!-- Register Activity -->
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
