--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CineStack">
-        
-        <!-- Login Activity - LAUNCHER -->
+        <activity
+            android:name=".EditMovieActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddMovieActivity"
+            android:exported="false" /> <!-- Login Activity - LAUNCHER -->
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        
-        <!-- Register Activity -->
+        </activity> <!-- Register Activity -->
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
-        
-        <!-- Main Activity -->
+            android:screenOrientation="portrait" /> <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="false"
